change Add to ADD in h2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Hi!</h1>
-    <h2>Add new h2!</h2>
+    <h2>ADD new h2!</h2>
     <script src="script.js"></script>
   </body>
 </html>
