add little feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Hi!</h1>
     <h2>ADD new h2!</h2>
+    <h3>Adding little feature</h3>
     <script src="script.js"></script>
   </body>
 </html>
